// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusteringDotplot biclustering should match snapshot 1`] = `
<div>
  <div
    className="form__option-clustering-header"
  >
    Clustering
  </div>
  <div
    className="form__option-clustering-introduction"
  >
    See the
     
    <Component
      className="form__option-clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="form__option-clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="form__option-clustering-biclustering-checkbox"
  >
    <div
      className="form__option-clustering-biclustering-checkbox-label"
    >
      Approximate biclustering (faster):
    </div>
    <CustomField
      name="biclusteringApprox"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;

exports[`ClusteringDotplot hierarchical should match snapshot 1`] = `
<div>
  <div
    className="form__option-clustering-header"
  >
    Clustering
  </div>
  <div
    className="form__option-clustering-introduction"
  >
    See the
     
    <Component
      className="form__option-clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="form__option-clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="form__option-clustering-hierarchical"
  >
    <CustomField
      label="Distance metric"
      name="distance"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "binary",
            "value": "binary",
          },
          Object {
            "text": "Canberra",
            "value": "canberra",
          },
          Object {
            "text": "Euclidean",
            "value": "euclidean",
          },
          Object {
            "text": "Jaccard",
            "value": "jaccard",
          },
          Object {
            "text": "Manhattan",
            "value": "manhattan",
          },
          Object {
            "text": "maximum",
            "value": "maximum",
          },
        ]
      }
      placeHolder="Distance metric..."
      type="select"
    />
    <CustomField
      label="form__option-clustering method"
      name="clusteringMethod"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "average",
            "value": "average",
          },
          Object {
            "text": "centroid",
            "value": "centroid",
          },
          Object {
            "text": "complete",
            "value": "complete",
          },
          Object {
            "text": "McQuitty",
            "value": "mcquitty",
          },
          Object {
            "text": "median",
            "value": "median",
          },
          Object {
            "text": "single",
            "value": "single",
          },
          Object {
            "text": "ward",
            "value": "ward",
          },
        ]
      }
      placeHolder="Clustering method..."
      type="select"
    />
  </div>
  <div
    className="form__option-clustering-checkbox"
  >
    <div
      className="form__option-clustering-checkbox-label"
    >
      Optimize clustering:
    </div>
    <CustomField
      name="clusteringOptimize"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;

exports[`ClusteringDotplot no clustreing require conditions and readouts should match snapshot 1`] = `
<div>
  <div
    className="form__option-clustering-header"
  >
    Clustering
  </div>
  <div
    className="form__option-clustering-introduction"
  >
    See the
     
    <Component
      className="form__option-clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="form__option-clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="form__option-clustering-none"
  >
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of conditions and readouts in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done by selecting
      \\"cluster all\\" under the condition or readout options menu."
      label="Condition options"
      name="conditionClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply conditions",
            "value": "none",
          },
          Object {
            "text": "Cluster all conditions",
            "value": "conditions",
          },
        ]
      }
      placeHolder="Condition options..."
      type="select"
    />
    <CustomField
      label="Conditions"
      name="conditionList"
      onChange={[Function]}
      placeHolder="Conditions..."
      type="textArea"
    />
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done by selecting
      \\"cluster all\\" under the condition or readout options menu."
      label="Readout options"
      name="readoutClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply readouts",
            "value": "none",
          },
          Object {
            "text": "Cluster all readouts",
            "value": "readouts",
          },
        ]
      }
      placeHolder="Readout options..."
      type="select"
    />
    <CustomField
      label="Readouts"
      name="readoutList"
      onChange={[Function]}
      placeHolder="Readouts..."
      type="textArea"
    />
  </div>
  <div
    className="form__option-clustering-checkbox"
  >
    <div
      className="form__option-clustering-checkbox-label"
    >
      Optimize clustering:
    </div>
    <CustomField
      name="clusteringOptimize"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;

exports[`ClusteringDotplot no clustreing require only conditions should match snapshot 1`] = `
<div>
  <div
    className="form__option-clustering-header"
  >
    Clustering
  </div>
  <div
    className="form__option-clustering-introduction"
  >
    See the
     
    <Component
      className="form__option-clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="form__option-clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="form__option-clustering-none"
  >
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of conditions and readouts in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done by selecting
      \\"cluster all\\" under the condition or readout options menu."
      label="Condition options"
      name="conditionClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply conditions",
            "value": "none",
          },
          Object {
            "text": "Cluster all conditions",
            "value": "conditions",
          },
        ]
      }
      placeHolder="Condition options..."
      type="select"
    />
    <CustomField
      label="Conditions"
      name="conditionList"
      onChange={[Function]}
      placeHolder="Conditions..."
      type="textArea"
    />
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done by selecting
      \\"cluster all\\" under the condition or readout options menu."
      label="Readout options"
      name="readoutClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply readouts",
            "value": "none",
          },
          Object {
            "text": "Cluster all readouts",
            "value": "readouts",
          },
        ]
      }
      placeHolder="Readout options..."
      type="select"
    />
  </div>
  <div
    className="form__option-clustering-checkbox"
  >
    <div
      className="form__option-clustering-checkbox-label"
    >
      Optimize clustering:
    </div>
    <CustomField
      name="clusteringOptimize"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;

exports[`ClusteringDotplot no clustreing require only readouts should match snapshot 1`] = `
<div>
  <div
    className="form__option-clustering-header"
  >
    Clustering
  </div>
  <div
    className="form__option-clustering-introduction"
  >
    See the
     
    <Component
      className="form__option-clustering-introduction-link"
      to="/help/tools/dotplot"
    >
      help
    </Component>
     
    for clustering options available for this tool.
  </div>
  <CustomField
    label="form__option-clustering type"
    name="clustering"
    onChange={[Function]}
    options={
      Array [
        Object {
          "text": "none",
          "value": "none",
        },
        Object {
          "text": "Hierarchical",
          "value": "hierarchical",
        },
        Object {
          "text": "Biclustering",
          "value": "biclustering",
        },
      ]
    }
    placeHolder="Clustering type..."
    type="select"
  />
  <div
    className="form__option-clustering-none"
  >
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of conditions and readouts in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done by selecting
      \\"cluster all\\" under the condition or readout options menu."
      label="Condition options"
      name="conditionClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply conditions",
            "value": "none",
          },
          Object {
            "text": "Cluster all conditions",
            "value": "conditions",
          },
        ]
      }
      placeHolder="Condition options..."
      type="select"
    />
    <CustomField
      helpMessage="The user can generate dot plots without clustering if desired.
      In this case, a list of condition and readout genes in the desired display order must be
      supplied in the text boxes. Only conditions and readouts entered in the text box will be
      included in the analysis and in the dot plot. Condition and readout names must be entered
      as they appear in the input file name and are case sensitive. In some cases the
      user may want to control which conditions are shown in the dot plot and their ordering,
      while wanting to show and cluster all readouts, or vice versa. This can be done by selecting
      \\"cluster all\\" under the condition or readout options menu."
      label="Readout options"
      name="readoutClustering"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Supply readouts",
            "value": "none",
          },
          Object {
            "text": "Cluster all readouts",
            "value": "readouts",
          },
        ]
      }
      placeHolder="Readout options..."
      type="select"
    />
    <CustomField
      label="Readouts"
      name="readoutList"
      onChange={[Function]}
      placeHolder="Readouts..."
      type="textArea"
    />
  </div>
  <div
    className="form__option-clustering-checkbox"
  >
    <div
      className="form__option-clustering-checkbox-label"
    >
      Optimize clustering:
    </div>
    <CustomField
      name="clusteringOptimize"
      onChange={[Function]}
      type="switch"
    />
  </div>
</div>
`;
